--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ change
 
 -->
 
-<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
 <style>
 
@@ -31,7 +31,7 @@ change
 
 body {
     font-family: 'Noto Sans';
-    color: blue;
+    color: green;
     margin: 0;
 }
 
@@ -80,6 +80,7 @@ body {
     font-size: var(--font-size);
 }
 
+/* https://stackoverflow.com/questions/22011139/google-fonts-are-not-rendering-on-google-chrome */
 /* https://code.google.com/p/chromium/issues/detail?id=336476#c40 */
 body {
     -webkit-animation-delay: 0.1s;
