--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ change
 -->
 
 <link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 <style>
 
@@ -30,7 +31,7 @@ change
 }
 
 body {
-    font-family: 'Noto Sans';
+    font-family: 'Open Sans';
     color: green;
     margin: 0;
 }
@@ -49,7 +50,7 @@ body {
 
 .table,
 .panel {
-    font-family: 'Noto Sans';
+    /* font-family: 'Noto Sans'; */
 }
 
 .table {
