--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@ TODO
 
 center bomb
 
-typeface.js
-    If not, remove hebrew 1505
-    Or try to choose a consistent font
+Font a font that supports all languages
+    try typeface.js?
+    unfortunately, it sounds like
+
+        https://www.google.com/get/noto/
+
+    is the best option. (it's just a bunch of indian guys who care only about devanagari support)
 enable clicking
 color them when you click them
     if you get it wrong, maybe a fun animation?
@@ -19,6 +23,7 @@ change
 
 -->
 
+<link href="//fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -31,7 +36,7 @@ change
 }
 
 body {
-    font-family: 'Tahoma';
+    font-family: 'Arimo';
     margin: 0;
 }
 
