--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ change
 
 <style>
 
+@import url(//fonts.googleapis.com/earlyaccess/notosanshebrew.css);
+
 :root {
     --font-size: 60px;
     --cell-height: 100px;
@@ -38,7 +40,7 @@ change
 }
 
 body {
-    font-family: 'Noto';
+    font-family: 'Noto Sans Hebrew', 'Noto Sans';
     margin: 0;
 }
 
@@ -487,7 +489,7 @@ const openExplosionModal = () => {
         'breaking-bad-charmander.gif',
         'don-draper.gif',
         'stark.gif',
-        'waffle.webp',
+        // 'waffle.webp', // not sure this one works
         'wwe.gif',
     ]
 
