--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@ center bomb
 
 Find a font that supports all languages
     try typeface.js?
-    unfortunately, it sounds like
+    try
+
+        https://fonts.google.com/earlyaccess
+
+    if that doesn't work, use:
 
         https://www.google.com/get/noto/
 
-    is the best option.
+    instead.
 enable clicking
 color them when you click them
     if you get it wrong, maybe a fun animation?
@@ -23,13 +27,114 @@ change
 
 -->
 
-<link href="//fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
+<!-- <link href="//fonts.googleapis.com/css?family=Arimo" rel="stylesheet"> -->
+<!-- <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
 
 <style>
 
-@import url(//fonts.googleapis.com/earlyaccess/notosanshebrew.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosansarmenian.css);
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansavestan.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbalinese.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbamum.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbatak.css); */
+@import url(https://fonts.googleapis.com/earlyaccess/notosansbengali.css);
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbengaliui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbrahmi.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbuginese.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansbuhid.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscanadianaboriginal.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscarian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscham.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscherokee.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscoptic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscuneiform.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanscypriot.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansdeseret.css); */
+@import url(https://fonts.googleapis.com/earlyaccess/notosansdevanagari.css);
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansdevanagariui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansegyptianhieroglyphs.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansethiopic.css); */
+@import url(https://fonts.googleapis.com/earlyaccess/notosansgeorgian.css);
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansgothic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansgujarati.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansgujaratiui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansgurmukhi.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansgurmukhiui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanshanunoo.css); */
+@import url(https://fonts.googleapis.com/earlyaccess/notosanshebrew.css);
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansimperialaramaic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansinscriptionalpahlavi.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansinscriptionalparthian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansjavanese.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskaithi.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskannada.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskannadaui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskayahli.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskharoshthi.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskhmer.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskhmerui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanskufiarabic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslao.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslaoui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslepcha.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslimbu.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslinearb.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslisu.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslycian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanslydian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmalayalam.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmalayalamui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmandaic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmeeteimayek.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmongolian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmyanmar.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansmyanmarui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansnewtailue.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansogham.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansolchiki.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansolditalic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansoldpersian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansoldsoutharabian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansoldturkic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansoriya.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansoriyaui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansosmanya.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansphagspa.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansphoenician.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansrejang.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansrunic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssamaritan.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssaurashtra.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansscsliced.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansshavian.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssinhala.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssundanese.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssylotinagri.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssyriaceastern.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssyriacestrangela.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanssyriacwestern.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstagalog.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstagbanwa.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstaile.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstaitham.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstaiviet.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstamil.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstamilui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstelugu.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansteluguui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansthaana.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansthai.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansthaiui.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstibetan.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosanstifinagh.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansugaritic.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansvai.css); */
+/* @import url(https://fonts.googleapis.com/earlyaccess/notosansyi.css); */
+
+@import url(https://fonts.googleapis.com/earlyaccess/notokufiarabic.css);
 
 :root {
     --font-size: 60px;
@@ -40,7 +145,7 @@ change
 }
 
 body {
-    font-family: 'Noto Sans Hebrew', 'Noto Sans';
+    font-family: 'Noto Sans Hebrew', 'Noto Kufi Arabic', 'Noto Sans Georgian', 'Noto Sans KR', 'Noto Sans';
     margin: 0;
 }
 
